creating the model using three article/table signals

--- a/model_title_main_passage_keywords/table_retrieval_title_main_passage_keywords.ipynb
+++ b/model_title_main_passage_keywords/table_retrieval_title_main_passage_keywords.ipynb
@@ -63,7 +63,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# embedding_model = gs.models.FastText.load_fasttext_format('pre_trained_models/cc.en.300.bin')\n",
     "embedding_model = gs.models.FastText.load('../train_embedding_models/fasttext_embedding_50d_all_signals')"
    ]
   },
@@ -109,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +117,7 @@
     "    result= indexing_distinct_tables.search(\n",
     "        index=\"distinct_tables\", \n",
     "        body = {\n",
-    "        \"_source\": [\"tablePgID\",\"tablePgTitle\"],\n",
+    "        \"_source\": [\"tablePgID\",\"tablePgTitle\",\"tablePgSummary\",\"tablePgKeywords\"],\n",
     "        \"from\" : 0,\n",
     "        \"size\" : 100,\n",
     "        \"query\": {\n",
@@ -155,15 +154,22 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "MAX_PAD = 31\n",
+    "MAX_PAD_TITLE = 55\n",
     "\n",
     "def sequence_padding(X_DIM, value):\n",
     "    \n",
-    "    value_padding = np.pad(value, ((0,MAX_PAD - X_DIM),(0,0)), 'constant')\n",
+    "    value_padding = np.pad(value, ((0,MAX_PAD_TITLE - X_DIM),(0,0)), 'constant')\n",
     "    \n",
     "    return value_padding"
    ]
@@ -178,9 +184,10 @@
     "\n",
     "    value = tknzr.tokenize(str(value))\n",
     "    \n",
-    "    if len(value) < MAX_PAD:\n",
+    "    if len(value) < MAX_PAD_TITLE:\n",
     "        \n",
     "        embedding = embedding_model.wv[value]\n",
+    "        embedding = embedding.astype('float16')\n",
     "        \n",
     "        padding_embedding = sequence_padding(embedding.shape[0],embedding)\n",
     "        \n",
@@ -188,10 +195,32 @@
     "        \n",
     "    else:\n",
     "        \n",
-    "        embedding = embedding_model.wv[value[0:MAX_PAD]]\n",
+    "        embedding = embedding_model.wv[value[0:MAX_PAD_TITLE]]\n",
+    "        embedding = embedding.astype('float16')\n",
     "        \n",
     "        return embedding"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -210,8 +239,12 @@
     "        table_ID = hit['_source']['tablePgID']\n",
     "        \n",
     "        table_page_title = hit['_source']['tablePgTitle']\n",
+    "        \n",
+    "        table_page_main_passage = hit['_source']['tablePgSummary']\n",
+    "        \n",
+    "        table_page_keywords = hit['_source']['tablePgKeywords']\n",
     "    \n",
-    "        tables_index.append([table_ID,table_page_title])\n",
+    "        tables_index.append([table_ID,table_page_title,table_page_main_passage, table_page_keywords])\n",
     "    \n",
     "    return tables_index"
    ]
@@ -232,7 +265,7 @@
     }
    ],
    "source": [
-    "ranking_model = tf.keras.models.load_model('best_model_title_coattention_1_1_14_0.9374.h5')"
+    "ranking_model = tf.keras.models.load_model('attention_model_title_main_passage_keywords_1_1_23_0.9844.h5')"
    ]
   },
   {
@@ -315,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -330,10 +363,17 @@
     "        \n",
     "        article_ID = row['page_id']\n",
     "        article_title_text = row['page_title']\n",
+    "        article_main_passage_text = row['meta_description']\n",
+    "        article_keywords_text = row['keywords'] \n",
+    "        \n",
     "        query = row['page_title']+\" \"+row['meta_description']+\" \"+row['keywords']\n",
     "        \n",
     "        article_title = []\n",
-    "        title_table = []\n",
+    "        article_main_passage = []\n",
+    "        article_keywords = []\n",
+    "        table_title = []\n",
+    "        table_main_passage = []\n",
+    "        table_keywords = []\n",
     "        ranked_tables_model = []\n",
     "\n",
     "        ranked_tables_index = search_index(query)\n",
@@ -341,18 +381,32 @@
     "        if len(ranked_tables_index) > 0:\n",
     "            \n",
     "            article_title_embedding = create_embedding(article_title_text)\n",
+    "            article_main_passage_embedding = create_embedding(article_main_passage_text)\n",
+    "            article_keywords_embedding = create_embedding(article_keywords_text)\n",
     "            \n",
-    "            for table_ID, table_title in (ranked_tables_index):\n",
+    "            for table_ID, index_table_title, index_table_main_passage, index_table_keywords in (ranked_tables_index):\n",
     "                    \n",
-    "                table_title_embedding = create_embedding(str(table_title))\n",
+    "                table_title_embedding = create_embedding(str(index_table_title))\n",
+    "                table_main_passage_embedding = create_embedding(str(index_table_main_passage))\n",
+    "                table_keywords_embedding = create_embedding(str(index_table_keywords))\n",
     "\n",
     "                article_title.append(article_title_embedding)\n",
-    "                title_table.append(table_title_embedding)\n",
+    "                article_main_passage.append(article_main_passage_embedding)\n",
+    "                article_keywords.append(article_keywords_embedding)\n",
+    "                \n",
+    "                table_title.append(table_title_embedding)\n",
+    "                table_main_passage.append(table_main_passage_embedding)\n",
+    "                table_keywords.append(table_keywords_embedding)\n",
     "\n",
-    "            article_title = np.array(article_title)\n",
-    "            title_table = np.array(title_table)\n",
+    "            article_title = np.array(article_title, dtype='float16')\n",
+    "            article_main_passage = np.array(article_main_passage, dtype='float16')\n",
+    "            article_keywords = np.array(article_keywords, dtype='float16')\n",
+    "            \n",
+    "            table_title = np.array(table_title, dtype='float16')\n",
+    "            table_main_passage = np.array(table_main_passage, dtype='float16')\n",
+    "            table_keywords = np.array(table_keywords, dtype='float16')\n",
     "           \n",
-    "            table_ranking_model = ranking_model.predict([article_title,title_table])\n",
+    "            table_ranking_model = ranking_model.predict([article_title, article_main_passage, article_keywords, table_title, table_main_passage, table_keywords])\n",
     "\n",
     "            for i in range(0,len(table_ranking_model)):\n",
     "\n",
@@ -374,24 +428,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "1026it [02:41,  6.13it/s]\n",
-      "1026it [02:39,  6.73it/s]\n",
-      "1026it [02:38,  6.83it/s]\n",
-      "1026it [02:40,  6.73it/s]\n"
+      "165it [02:28,  1.91it/s]"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "need at least one array to concatenate",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-20-ebb42566b82a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mk\u001b[0m \u001b[0;32min\u001b[0m \u001b[0maccuracy_K\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m     \u001b[0mrun_search\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-19-f79705c8a731>\u001b[0m in \u001b[0;36mrun_search\u001b[0;34m(k)\u001b[0m\n\u001b[1;32m     35\u001b[0m                 \u001b[0mtable_title_embedding\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcreate_embedding\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mindex_table_title\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     36\u001b[0m                 \u001b[0mtable_main_passage_embedding\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcreate_embedding\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mindex_table_main_passage\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 37\u001b[0;31m                 \u001b[0mtable_keywords_embedding\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcreate_embedding\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mindex_table_keywords\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     38\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     39\u001b[0m                 \u001b[0marticle_title\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0marticle_title_embedding\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-10-69b730284409>\u001b[0m in \u001b[0;36mcreate_embedding\u001b[0;34m(value)\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvalue\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0mMAX_PAD_TITLE\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m         \u001b[0membedding\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0membedding_model\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwv\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mvalue\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m         \u001b[0membedding\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0membedding\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mastype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'float16'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/lib/python3.7/site-packages/gensim/models/keyedvectors.py\u001b[0m in \u001b[0;36m__getitem__\u001b[0;34m(self, entities)\u001b[0m\n\u001b[1;32m    352\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_vector\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mentities\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    353\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 354\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mvstack\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_vector\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mentity\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mentity\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mentities\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    355\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    356\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__contains__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mentity\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<__array_function__ internals>\u001b[0m in \u001b[0;36mvstack\u001b[0;34m(*args, **kwargs)\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/lib/python3.7/site-packages/numpy/core/shape_base.py\u001b[0m in \u001b[0;36mvstack\u001b[0;34m(tup)\u001b[0m\n\u001b[1;32m    280\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0marrs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    281\u001b[0m         \u001b[0marrs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0marrs\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 282\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0m_nx\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconcatenate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0marrs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    283\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    284\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<__array_function__ internals>\u001b[0m in \u001b[0;36mconcatenate\u001b[0;34m(*args, **kwargs)\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: need at least one array to concatenate"
      ]
     }
    ],
@@ -405,42 +466,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[['Acc@1', '0.3304'],\n",
-       " ['Acc@5', '0.3743'],\n",
-       " ['Acc@10', '0.4162'],\n",
-       " ['Acc@20', '0.4825']]"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "result"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "# best_model_title_attention_1_1_12_0.9469.h5\n",
-    "# best_model_title_coattention_1_1_14_0.9374.h5"
+    "result"
    ]
   },
   {
