model catch all

--- a/data_analysis/table_analysis.ipynb
+++ b/data_analysis/table_analysis.ipynb
@@ -585,20 +585,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "85995it [00:24, 3440.37it/s]\n"
+      "85995it [00:22, 3743.57it/s]\n"
      ]
     }
    ],
    "source": [
     "title_lenght = []\n",
     "meta_description_lenght = []\n",
+    "keywords_lenght = []\n",
     "\n",
     "tknzr = TweetTokenizer()\n",
     "\n",
@@ -606,14 +607,17 @@
     "    \n",
     "    title = str(row['table_page_title'])\n",
     "    meta_description = str(row['table_page_summary'])\n",
+    "    keywords = str(row['table_page_keywords'])\n",
     "\n",
     "    \n",
     "    lenght_title = len(tknzr.tokenize(title))\n",
     "    lenght_meta_description = len(tknzr.tokenize(meta_description))\n",
+    "    lenght_keywords = len(tknzr.tokenize(keywords))\n",
     "    \n",
     "    \n",
     "    title_lenght.append(lenght_title)\n",
-    "    meta_description_lenght.append(lenght_meta_description)"
+    "    meta_description_lenght.append(lenght_meta_description)\n",
+    "    keywords_lenght.append(lenght_keywords)"
    ]
   },
   {
@@ -664,6 +668,31 @@
     "print(\"min words = \"+str(np.min(meta_description_lenght)))\n",
     "print(\"avg words = \"+str(np.mean(meta_description_lenght)))\n",
     "print(\"std words = \"+str(np.std(meta_description_lenght)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "meta description analysis:\n",
+      "max words = 18\n",
+      "min words = 1\n",
+      "avg words = 10.421873364730507\n",
+      "std words = 1.490688021869294\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('meta description analysis:')\n",
+    "print(\"max words = \"+str(np.max(keywords_lenght)))\n",
+    "print(\"min words = \"+str(np.min(keywords_lenght)))\n",
+    "print(\"avg words = \"+str(np.mean(keywords_lenght)))\n",
+    "print(\"std words = \"+str(np.std(keywords_lenght)))"
    ]
   }
  ],
