--- a/data_analysis/article_analysis.ipynb
+++ b/data_analysis/article_analysis.ipynb
@@ -611,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -620,20 +620,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>full_text</th>\n",
+       "      <th>keywords</th>\n",
+       "      <th>meta_description</th>\n",
+       "      <th>meta_keywords</th>\n",
+       "      <th>page_id</th>\n",
+       "      <th>page_title</th>\n",
+       "      <th>summary</th>\n",
+       "      <th>tags</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>when comes pioneers progressive rock handful b...</td>\n",
+       "      <td>faces anderson album chris jon went record tre...</td>\n",
+       "      <td>yes among year rock roll hall fame inductees c...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4125505</td>\n",
+       "      <td>rock roll hall famers jon anderson trevor rabi...</td>\n",
+       "      <td>because good photos the best yes album coverss...</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                           full_text  \\\n",
+       "0  when comes pioneers progressive rock handful b...   \n",
+       "\n",
+       "                                            keywords  \\\n",
+       "0  faces anderson album chris jon went record tre...   \n",
+       "\n",
+       "                                    meta_description meta_keywords  page_id  \\\n",
+       "0  yes among year rock roll hall fame inductees c...           NaN  4125505   \n",
+       "\n",
+       "                                          page_title  \\\n",
+       "0  rock roll hall famers jon anderson trevor rabi...   \n",
+       "\n",
+       "                                             summary tags  \n",
+       "0  because good photos the best yes album coverss...  NaN  "
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_articles.head(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "1026it [00:00, 4682.36it/s]\n"
+      "1026it [00:00, 5364.90it/s]\n"
      ]
     }
    ],
    "source": [
     "title_lenght = []\n",
     "meta_description_lenght = []\n",
+    "keywords_lenght = []\n",
     "\n",
     "tknzr = TweetTokenizer()\n",
     "\n",
@@ -641,14 +720,16 @@
     "    \n",
     "    title = row['page_title']\n",
     "    meta_description = row['meta_description']\n",
-    "\n",
+    "    keywords = row['keywords']\n",
     "    \n",
     "    lenght_title = len(tknzr.tokenize(title))\n",
     "    lenght_meta_description = len(tknzr.tokenize(meta_description))\n",
+    "    lenght_keywords = len(tknzr.tokenize(keywords))\n",
     "    \n",
     "    \n",
     "    title_lenght.append(lenght_title)\n",
-    "    meta_description_lenght.append(lenght_meta_description)"
+    "    meta_description_lenght.append(lenght_meta_description)\n",
+    "    keywords_lenght.append(lenght_keywords)"
    ]
   },
   {
@@ -699,6 +780,31 @@
     "print(\"min words = \"+str(np.min(meta_description_lenght)))\n",
     "print(\"avg words = \"+str(np.mean(meta_description_lenght)))\n",
     "print(\"std words = \"+str(np.std(meta_description_lenght)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "meta description analysis:\n",
+      "max words = 21\n",
+      "min words = 2\n",
+      "avg words = 13.297270955165692\n",
+      "std words = 2.2758868970796193\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('meta description analysis:')\n",
+    "print(\"max words = \"+str(np.max(keywords_lenght)))\n",
+    "print(\"min words = \"+str(np.min(keywords_lenght)))\n",
+    "print(\"avg words = \"+str(np.mean(keywords_lenght)))\n",
+    "print(\"std words = \"+str(np.std(keywords_lenght)))"
    ]
   }
  ],
