--- a/model_catch_all/table_retrieval_catch_all.ipynb
+++ b/model_catch_all/table_retrieval_catch_all.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,16 +23,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'2.0.0-rc0'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "tf.__version__"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,9 +68,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'acknowledged': True, 'shards_acknowledged': True}"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "indexing_distinct_tables.indices.close(index='distinct_tables')\n",
     "indexing_distinct_tables.indices.put_settings(index='distinct_tables', body={\"index\": {\"similarity\": {\"default\": {\"type\": \"classic\"}}}})\n",
@@ -86,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,11 +161,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "MAX_PAD_TITLE = 55\n",
+    "MAX_PAD_TITLE = 161\n",
     "\n",
     "def sequence_padding(X_DIM, value):\n",
     "    \n",
@@ -154,19 +176,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "def create_embedding(value):\n",
-    "    \n",
-    "    if value == \"\":\n",
     "        \n",
-    "        value = [\"\"]\n",
-    "    \n",
-    "    else:\n",
-    "        \n",
-    "        value = tknzr.tokenize(str(value))\n",
+    "    value = tknzr.tokenize(str(value))\n",
     "    \n",
     "    if len(value) < MAX_PAD_TITLE:\n",
     "        \n",
@@ -208,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,25 +251,104 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From /home/lss9/anaconda3/lib/python3.7/site-packages/tensorflow_core/python/ops/math_grad.py:1424: where (from tensorflow.python.ops.array_ops) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Use tf.where in 2.0, which has the same broadcast rule as np.where\n"
+     ]
+    }
+   ],
    "source": [
-    "ranking_model = tf.keras.models.load_model('affinity_model_title_main_passage_keywords_1_1_34_0.9841.h5')"
+    "ranking_model = tf.keras.models.load_model('affinity_model_title_main_passage_keywords_1_1_77_0.9960.h5')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>full_text</th>\n",
+       "      <th>keywords</th>\n",
+       "      <th>meta_description</th>\n",
+       "      <th>meta_keywords</th>\n",
+       "      <th>page_id</th>\n",
+       "      <th>page_title</th>\n",
+       "      <th>summary</th>\n",
+       "      <th>tags</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>when comes pioneers progressive rock handful b...</td>\n",
+       "      <td>faces anderson album chris jon went record tre...</td>\n",
+       "      <td>yes among year rock roll hall fame inductees c...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4125505</td>\n",
+       "      <td>rock roll hall famers jon anderson trevor rabi...</td>\n",
+       "      <td>because good photos the best yes album coverss...</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                           full_text  \\\n",
+       "0  when comes pioneers progressive rock handful b...   \n",
+       "\n",
+       "                                            keywords  \\\n",
+       "0  faces anderson album chris jon went record tre...   \n",
+       "\n",
+       "                                    meta_description meta_keywords  page_id  \\\n",
+       "0  yes among year rock roll hall fame inductees c...           NaN  4125505   \n",
+       "\n",
+       "                                          page_title  \\\n",
+       "0  rock roll hall famers jon anderson trevor rabi...   \n",
+       "\n",
+       "                                             summary tags  \n",
+       "0  because good photos the best yes album coverss...  NaN  "
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "test_articles.head(1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,48 +365,33 @@
     "        article_title_text = row['page_title']\n",
     "        article_main_passage_text = row['meta_description']\n",
     "        article_keywords_text = row['keywords'] \n",
+    "        article_catch_all_text = article_title_text+\" \"+article_main_passage_text+\" \"+article_keywords_text\n",
     "        \n",
     "        query = row['page_title']+\" \"+row['meta_description']+\" \"+row['keywords']\n",
     "        \n",
-    "        article_title = []\n",
-    "        article_main_passage = []\n",
-    "        article_keywords = []\n",
-    "        table_title = []\n",
-    "        table_main_passage = []\n",
-    "        table_keywords = []\n",
+    "        article_catch_all = []\n",
+    "        table_catch_all = []\n",
     "        ranked_tables_model = []\n",
     "\n",
     "        ranked_tables_index = search_index(query)\n",
     "        \n",
     "        if len(ranked_tables_index) > 0:\n",
     "            \n",
-    "            article_title_embedding = create_embedding(article_title_text)\n",
-    "            article_main_passage_embedding = create_embedding(article_main_passage_text)\n",
-    "            article_keywords_embedding = create_embedding(article_keywords_text)\n",
+    "            article_catch_all_embedding = create_embedding(article_catch_all_text)\n",
     "            \n",
     "            for table_ID, index_table_title, index_table_main_passage, index_table_keywords in (ranked_tables_index):\n",
     "                       \n",
-    "                table_title_embedding = create_embedding(str(index_table_title))\n",
-    "                table_main_passage_embedding = create_embedding(str(index_table_main_passage))\n",
-    "                table_keywords_embedding = create_embedding(str(index_table_keywords))\n",
+    "                table_catch_all_text = str(index_table_title)+\" \"+str(index_table_main_passage)+\" \"+str(index_table_keywords)\n",
+    "                table_catch_all_embedding = create_embedding(str(table_catch_all_text))\n",
+    "                 \n",
+    "                article_catch_all.append(article_catch_all_embedding)\n",
+    "                table_catch_all.append(table_catch_all_embedding)\n",
     "                \n",
-    "                article_title.append(article_title_embedding)\n",
-    "                article_main_passage.append(article_main_passage_embedding)\n",
-    "                article_keywords.append(article_keywords_embedding)\n",
-    "                \n",
-    "                table_title.append(table_title_embedding)\n",
-    "                table_main_passage.append(table_main_passage_embedding)\n",
-    "                table_keywords.append(table_keywords_embedding)\n",
     "\n",
-    "            article_title = np.array(article_title, dtype='float16')\n",
-    "            article_main_passage = np.array(article_main_passage, dtype='float16')\n",
-    "            article_keywords = np.array(article_keywords, dtype='float16')\n",
-    "            \n",
-    "            table_title = np.array(table_title, dtype='float16')\n",
-    "            table_main_passage = np.array(table_main_passage, dtype='float16')\n",
-    "            table_keywords = np.array(table_keywords, dtype='float16')\n",
+    "            article_catch_all = np.array(article_catch_all, dtype='float16')\n",
+    "            table_catch_all = np.array(table_catch_all, dtype='float16')\n",
     "           \n",
-    "            table_ranking_model = ranking_model.predict([article_title, article_main_passage, article_keywords, table_title, table_main_passage, table_keywords])\n",
+    "            table_ranking_model = ranking_model.predict([article_catch_all,table_catch_all])\n",
     "\n",
     "            for i in range(0,len(table_ranking_model)):\n",
     "\n",
@@ -333,9 +413,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "1026it [06:39,  2.59it/s]\n",
+      "1026it [06:36,  2.65it/s]\n",
+      "1026it [06:36,  2.60it/s]\n",
+      "1026it [06:36,  2.62it/s]\n"
+     ]
+    }
+   ],
    "source": [
     "accuracy_K = [1,5,10,20]\n",
     "\n",
@@ -346,9 +437,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[['Acc@1', '0.5653'],\n",
+       " ['Acc@5', '0.5702'],\n",
+       " ['Acc@10', '0.5789'],\n",
+       " ['Acc@20', '0.6043']]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "result"
    ]
